# transformer-thermal-model

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_GOVERNANCE.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  VISION.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  sitemap.xml  sonar-project.properties
.github/: CODEOWNERS  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-package.yaml  build.yaml  citations.yml  codeql.yml  pre-commit.yaml  publish.yaml  pytest.yaml  reuse-complaince.yaml  reuse-compliance.yaml  run-example-notebooks.yaml
api_reference/aging/: index.html
api_reference/architecture/: index.html
api_reference/components/: index.html
api_reference/cooler/: index.html
api_reference/cooling_switch_controller/: index.html
api_reference/hot-spot_calibration/: index.html
api_reference/model/: index.html
api_reference/model_input_output/: index.html
api_reference/specifications/: index.html
api_reference/toolbox/: index.html
api_reference/transformer/: index.html
docs/: index.md  model_input.md
docs/api_reference/: aging.md  architecture.md  components.md  cooler.md  cooling_switch_controller.md  hot-spot_calibration.md  model.md  model_input_output.md  specifications.md  toolbox.md  transformer.md
docs/examples/: example_ONAN_ONAF_switch.ipynb  example_ONAN_ONAF_switch.ipynb.license  example_initial_state.ipynb  hot-spot_calibration.ipynb  initial_temperature.ipynb  initiate_temperature.ipynb  onan-onaf-analysis.ipynb  power_transformer_example.ipynb  simple_thermal_profile_example_distribution.ipynb  three-winding-calculation.ipynb
docs/get_started/: about.md  model_input.md
docs/mermaid/: architecture.mmd
docs/stylesheets/: extra.css
docs/theoretical_documentation/: ONAN_ONAF_modelling.md  hotspot_calibration.md  model_description.md  model_improvements.md  overview.md  temperature_limits.md  transformer_definition.md
examples/example_ONAN_ONAF_switch/: index.html
examples/example_initial_state/: index.html
examples/hot-spot_calibration/: index.html
examples/initial_temperature/: index.html
examples/power_transformer_example/: index.html  power_transformer_example.ipynb
examples/quickstart/: index.html  quickstart.ipynb
examples/simple_thermal_profile_example_distribution/: index.html  simple_thermal_profile_example_distribution.ipynb
examples/three-winding-calculation/: index.html
get_started/about/: index.html
get_started/model_input/: index.html
javascripts/: katex.js
model_input/: index.html
search/: search_index.json
tests/: conftest.py  test_deprecation_warnings.py
tests/model/: test_aging.py  test_hot_spot_calibration.py  test_initial_temperatures.py  test_intial_temperatures.py  test_model.py  test_onan_onaf_switch.py  test_threephase_transformer.py  test_transformer.py  three_winding_validation_data.csv
tests/schemas/: test_thermal_model_profile_input.py  test_threephase.py  test_threewinding.py
theoretical_documentation/ONAN_ONAF_modelling/: index.html
theoretical_documentation/hotspot_calibration/: index.html
theoretical_documentation/model_description/: index.html
theoretical_documentation/model_improvements/: index.html
theoretical_documentation/overview/: index.html
theoretical_documentation/temperature_limits/: index.html
(+26 files in other folders)
