# SPDX-FileCopyrightText: Contributors to the Transformer Thermal Model project
#
# SPDX-License-Identifier: MPL-2.0

[project]
name = "transformer-thermal-model"
version = "0.6.0"
description = "Thermal model for transformers"
authors = [{ name = "Contributors to the Transformer Thermal Model project" }]
requires-python = ">=3.11, <4.0"
readme = "README.md"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas~=3.0",
    "numpy>=2.2.5,<3",
    "pydantic>=2.11.1,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "ruff>=0.15.10,<0.16",
    "mypy>=2.0.0",
    "pytest-cov>=7.1.0,<8",
    "pre-commit>=4.1.0,<5",
    "codespell>=2.4.2,<3",
    "ipython>=9.3.0,<10",
    "isort>=8.0.1,<9",
    "mutmut>=3.3.1,<4",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocstrings-python>=2.0.0,<3",
    "mkdocs-exclude>=1.0.2,<2",
    "mkdocs-llmstxt>=0.5.0,<0.6",
    "mkdocs-material>=9.7.6,<10",
    "mkdocs-mermaid2-plugin>=1.2.1,<2",
    "mkdocs-jupyter>=0.26.2,<0.27",
    "matplotlib>=3.10.3,<4",
    "jupyter>=1.1.1,<2.0.0",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.docs]
optional = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
output-format = "github"
line-length = 120
show-fixes = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflake
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pydocstyle
    "D",
]
ignore = [
    # Missing docstring in public module
    "D100",
    # Missing docstring in public package
    "D104",
    #  `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `one-blank-line-before-class`.
    "D203",
    # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`.
    "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Allow longer line length in conftest where many 1-line dictinaries are specified
"conftest.py" = ["E501"]

[tool.mypy]
packages = ["transformer_thermal_model"]
exclude = ["migrations"]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
markers = ["integrationtest"]
addopts = [
  "--cov",
  "--cov-branch",
  "--cov-report=xml",
  "--cov-report=term-missing",  # Coverage report incl missing lines in terminal
  "--doctest-modules",  # Run doctest to test examples in docstrings
  "--ignore=mutants"  # Ignore the mutants folder
]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL", "NUMBER"]

[tool.coverage.run]
relative_files = true
omit = [
    "tests/*"
]
